# Bioreactor-Cafe-ESP32

./: CMakeLists.txt  Doxyfile  registro_cafe.txt
Documentacion/html/: annotated.html  annotated_dup.js  botones_8c.html  botones_8c.js  botones_8c_source.html  botones_8h.html  botones_8h.js  botones_8h_source.html  classes.html  definiciones_8h.html  definiciones_8h.js  definiciones_8h_source.html  dht_8c.html  dht_8c.js  dht_8c_source.html  dht_8h.html  dht_8h.js  dht_8h_source.html  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_5c982d53a68cdbcd421152b4020263a9.js  doxygen_crawl.html  ds1302_8c.html  ds1302_8c.js  ds1302_8c_source.html  ds1302_8h.html  ds1302_8h.js  ds1302_8h_source.html  ds18b20_8c.html  ds18b20_8c.js  ds18b20_8c_source.html  ds18b20_8h.html  ds18b20_8h.js  ds18b20_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  (+50 more)
Documentacion/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_1.js  files_2.js  files_3.js  files_6.js  files_7.js  functions_1.js  functions_2.js  functions_3.js  (+20 more)
main/: CMakeLists.txt  botones.c  botones.h  definiciones.h  dht.c  dht.h  ds1302.c  ds1302.h  ds18b20.c  ds18b20.h  i2c_lcd.c  i2c_lcd.h  ldr.c  ldr.h  main.c  ph_sensor.c  ph_sensor.h  rgb_control.c  rgb_control.h  sd_log.c  sd_log.h  sensores.c  sensores.h
